# talkwave

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.fr.md  README.md  README_fr.md  TEMPLATE.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
talkwave/: __init__.py  __main__.py  __version__.py  core.py  curl.py  frontend.py  handler.py  openai_api_call.py  parse.py  utils.py
talkwave/routes/: api.py  details.py  errors.py  home.py  log.py  resume.py  test.py
talkwave/templates/: index.html
talkwave/utils/: curl.py  dir.py  parse.py
templates/: 404.html  footer.txt  head.txt  index.html  menu.txt
tests/: __init__.py  test_core.py  test_curl.py  test_dir.py  test_frontend.py  test_init.py  test_main.py
