[tool.poetry]
name = "talkwave"
version = "0.0.1"
description = "TalkWave is an AI chatbot for developers written in Python."
authors = ["Sebastien Rousseau <sebastienrousseau@users.noreply.github.com>"]
license = "Apache Software License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.3"
openai = "^0.27.2"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
