[metadata]
name = talkwave
version = 0.0.1
author = Sebastian Rousseau
author_email = sebastian.rousseau@gmail.com
description = TalkWave is an AI chatbot for developers written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sebastienrousseau/talkwave
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Unix

keywords = iso 20022 pain.001 credit transfer financial banking payments csv sepa

[options]
packages =
    talkwave

install_requires =
    xmlschema

[wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
